| Bug #5920 | embedded-server version of 'mysql' tool doesn't handle --defaults-file | ||
|---|---|---|---|
| Submitted: | 6 Oct 2004 13:02 | Modified: | 11 Jan 2005 15:14 |
| Reporter: | Alexey Botchkov | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Embedded Library ( libmysqld ) | Severity: | S3 (Non-critical) |
| Version: | 4.1 | OS: | Any (All) |
| Assigned to: | Alexey Botchkov | CPU Architecture: | Any |
[6 Oct 2004 13:02]
Alexey Botchkov
[6 Oct 2004 13:13]
Alexey Botchkov
bk commit - 4.1 tree (hf:1.2051) BUG#5920
[28 Dec 2004 18:18]
Ingo Strüwing
I suggest some small changes as sent by mail.
[3 Jan 2005 14:37]
Alexey Botchkov
bk commit - 4.1 tree (hf:1.2160) BUG#5920 New patch sent (Ingo should be satisfied with the current code)
[11 Jan 2005 15:14]
Alexey Botchkov
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
