fix for bug #5920 (embedded-server mysql doesn't handle --defaults-file)